WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306077
Unreviewed, suppress warnings around B3 values StructType* which is held by the compiler global data structure throught B3 compilation
https://bugs.webkit.org/show_bug.cgi?id=306077
Summary
Unreviewed, suppress warnings around B3 values StructType* which is held by t...
Yusuke Suzuki
Reported
2026-01-22 16:35:53 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-22 16:36:00 PST
<
rdar://problem/168718662
>
Yusuke Suzuki
Comment 2
2026-01-22 16:36:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57087
EWS
Comment 3
2026-01-22 16:42:00 PST
Committed
306049@main
(9e6af35267ed): <
https://commits.webkit.org/306049@main
> Reviewed commits have been landed. Closing PR #57087 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug