Unreviewed, suppress warnings around B3 values StructType* which is held by the compiler global data structure throught B3 compilation https://bugs.webkit.org/show_bug.cgi?id=306077 rdar://168718662

* Source/JavaScriptCore/b3/B3ReduceStrength.cpp:
* Source/JavaScriptCore/b3/B3WasmStructNewValue.h:

Canonical link: https://commits.webkit.org/306049@main